// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeFetchOpts handles a group 1`] = `
Object {
  "search": "fee",
  "slug": "comslug",
  "sortBy": "join",
}
`;

exports[`makeFetchOpts handles no group 1`] = `
Object {
  "search": "fee",
  "slug": undefined,
  "sortBy": "join",
}
`;

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "fetchMembers": [Function],
  "setSearch": [Function],
  "setSort": [Function],
  "showMember": [Function],
}
`;

exports[`mapStateToProps handles null value for lastViewedGroup 1`] = `
Object {
  "canModerate": true,
  "group": SessionBoundModel {
    "_fields": Object {
      "id": 10,
      "slug": "tom",
    },
    "slug": "tom",
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": 123,
    },
    "id": 123,
  },
  "fetchOpts": Object {
    "search": undefined,
    "slug": "tom",
    "sortBy": undefined,
    "subject": "group",
  },
  "hasMore": undefined,
  "members": Array [],
  "network": null,
  "pending": undefined,
  "search": undefined,
  "slug": "tom",
  "sortBy": undefined,
  "sortKeys": Object {
    "join": "Newest",
    "location": "Location",
    "name": "Name",
  },
  "subject": "group",
}
`;
